--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,20 @@
 [package]
 name = "gui-scale-applet"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
-once_cell = "1"
 rust-embed = "8.0.0"
+tokio = "1.31"
 serde = "1.0.210"
-tracing = "0.1"
+url = "2.4.0"
 
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic.git"
 default-features = false
-features = ["applet", "wayland", "tokio"]
+features = ["applet", "wayland", "tokio", "desktop"]
+
+[features]
+xdg-portal = ["libcosmic/xdg-portal"]
+rfd = ["libcosmic/rfd"]
+default = ["xdg-portal"]
