--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ tokio = "1.31"
 serde = "1.0.210"
 url = "2.4.0"
 tracing = "0.1.40"
+ron = "0.8.0"
 
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic.git"
