--- a/data/com.bhh32.gui-scale-applet.desktop
+++ b/data/com.bhh32.gui-scale-applet.desktop
@@ -1,13 +1,13 @@
 [Desktop Entry]
 Name=GUI-Scale Applet
 Type=Application
-Exec=gui-scale-applet
+Exec=/app/bin/gui-scale-applet
 Terminal=false
-Categories=Network;Utility;COSMIC;
+Categories=Network;Utility
 Keywords=Tailscale;VPN;Network;COSMIC;Iced;
 Icon=com.bhh32.gui-scale-applet
 StartupNotify=true
 NoDisplay=true
 X-CosmicApplet=true
 X-CosmicHoverPopup=Start
-x-OverflowPriority=10
+X-OverflowPriority=10
