--- a/com.bhh32.gui-scale-applet.yml
+++ b/com.bhh32.gui-scale-applet.yml
@@ -50,4 +50,4 @@ modules:
     sources:
       - type: git
         url: https://github.com/cosmic-utils/gui-scale-applet.git
-        branch: main
+        branch: flatpak
